# house-of-stake-contracts

./: .gitignore  API.md  Cargo.toml  README.md  build_all.sh  build_release.sh  test_all.sh
.github/workflows/: release.yml
common/: Cargo.toml
common/src/: account.rs  events.rs  global_state.rs  lib.rs  lockup_update.rs  types.rs  utils.rs  venear.rs
integration-tests/: Cargo.toml
integration-tests/tests/: test_basics.rs  test_lockup.rs  test_venear.rs  test_voting.rs
integration-tests/tests/setup/: mod.rs
lockup-contract/: Cargo.toml
lockup-contract/legacy_tests/: spec.rs
lockup-contract/src/: gas.rs  getters.rs  internal.rs  lib.rs  owner.rs  owner_callbacks.rs  transfer.rs  types.rs  venear.rs  venear_ext.rs
lockup-contract/src/tests/: test_utils.rs
merkle-tree/: Cargo.toml
merkle-tree/src/: lib.rs
res/release/: lockup_contract.wasm  venear_contract.wasm  voting_contract.wasm
res/release/0_0_1/: lockup_contract.wasm  venear_contract.wasm  voting_contract.wasm
res/release/0_0_2/: venear_contract.wasm  voting_contract.wasm
res/release/1_0_0/: voting_contract.wasm
res/release/1_0_1/: lockup_contract.wasm  venear_contract.wasm
sandbox-staking-whitelist-contract/: Cargo.toml
sandbox-staking-whitelist-contract/src/: lib.rs
scripts/: approve_proposal.sh  create_account.sh  create_proposal.sh  delegate.sh  deploy_all.sh  lock_near.sh  print_accounts.sh  test_all.sh  testnet_create_account.sh  testnet_deploy.sh  view_balance.sh  view_proposal.sh  vote.sh
venear-contract/: Cargo.toml
venear-contract/src/: account.rs  config.rs  delegation.rs  global_state.rs  governance.rs  lib.rs  liquid_staking.rs  lockup.rs  snapshot.rs  storage.rs  token.rs  upgrade.rs
voting-contract/: Cargo.toml
voting-contract/src/: approver.rs  config.rs  governance.rs  lib.rs  metadata.rs  proposal.rs  reviewer.rs  upgrade.rs  votes.rs
