[workspace.package]
version = "0.0.1"
authors = ["Fastnear Inc <hello@fastnear.com>"]
edition = "2021"
repository = "https://github.com/fastnear/house-of-stake-contracts"
rust-version = "1.82.0"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "lockup-contract",
    "venear-contract",
    "merkle-tree",
    "common",
]

[workspace.dependencies]
near-sdk = { version = "5.7.0", features = ["unit-testing"] }
near-contract-standards = "5.7.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
uint = { version = "=0.9.0", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
