[package]
name = "common"
description = "This crate provides common types and utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
near-sdk.workspace = true
serde_json.workspace = true
uint.workspace = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
near-sdk = { workspace = true, features = ["legacy", "unit-testing"] }
serde_json.workspace = true