[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
near-sdk.workspace = true
serde_json.workspace = true

[dev-dependencies]
near-workspaces = { version = "0.17" }
tokio = { version = "1", features = ["full"] }
