[package]
name = "venear-lockup-contract"
description = "This crate provides the lockup contract for the House of Stake"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk.workspace = true
near-contract-standards.workspace = true
serde_json.workspace = true
uint.workspace = true
