[package]
name = "merkle-tree"
description = "This crate provides a Persistent Merkle Tree implementation"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
near-sdk.workspace = true
serde_json.workspace = true
